Make source and jar task dependent on uploadArchives

--- a/build-config/gradle-push.gradle
+++ b/build-config/gradle-push.gradle
@@ -120,7 +120,7 @@ afterEvaluate { project ->
 }
 
 project.tasks.whenTaskAdded { task ->
-    if (task.name == 'signArchives') {
+    if (task.name == 'uploadArchives') {
         this.addSourcesAndJavadocTask task
     }
 }
